fix: set home view to invisible instead of hidden

--- a/src/main/mobile/components/app.css
+++ b/src/main/mobile/components/app.css
@@ -309,3 +309,9 @@ body, #root {
 .cp__select {
     --palettle-container-height: 100%;
 }
+
+.ls-layer {
+    position: absolute;
+    inset: 0;          /* top: 0; right: 0; bottom: 0; left: 0; */
+    overflow-y: auto;
+}
